update README, fix small spelling errors

--- a/index.ipynb
+++ b/index.ipynb
@@ -105,7 +105,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Jane, who is a student of the Flatiron School immersive program, is fascinated by koalas, panda bears and dolphins. Her costudent albert did some research and estimated that the probability that the there will be koalas at the Bronx Zoo is equal to 70%, the probability that they have panda bears is equal to 40%, and the probability that they will have dolphins is equal to 80%. He also knew that the probability that they have all three of them is 22.4%.\n",
+    "Jane, who is a student of the Flatiron School immersive program, is fascinated by koalas, panda bears and dolphins. Her classmate Albert did some research and estimated that the probability that the there will be koalas at the Bronx Zoo is equal to 70%, the probability that they have panda bears is equal to 40%, and the probability that they will have dolphins is equal to 80%. He also knew that the probability that they have all three of them is 22.4%.\n",
     "\n",
     "- Are these events independent?\n",
     "- What is the probability that they have koalas and dolphins, but no panda bears?\n",
@@ -170,7 +170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The entire Flatiron crew is fascinated by the elephants. In the Bronx zoo, there keep male and female elephants seperately. It is known that female elephants lose their appetite during their early pregnancy. They'll skip 2 our of 10 meals during this period, whereas they'll eat 99% of their meals when they're not pregnant. On average, we know that 10% of the female elephants are pregnant in the Bronx zoo.\n",
+    "The entire Flatiron crew is fascinated by the elephants. In the Bronx zoo, they keep male and female elephants seperately. It is known that female elephants lose their appetite during their early pregnancy. They'll skip 2 our of 10 meals during this period, whereas they'll eat 99% of their meals when they're not pregnant. On average, we know that 10% of the female elephants are pregnant in the Bronx zoo.\n",
     "\n",
     "The Flatiron folks have been watching a particular elephant for a while, and noticed that while she skipped her breakfast, when they fed her again for lunch, she ate it all. \n",
     "\n",
@@ -347,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
